--- a/educative/index.html
+++ b/educative/index.html
@@ -226,6 +226,21 @@
     </a>
   </div>
 
+  <table>
+    <thead>
+      <tr class="header" id="theader">
+        <th id="nameColumnHeader" tabindex="0" role="button">Name</th>
+        <th id="sizeColumnHeader" class="detailsColumn" tabindex="0" role="button">
+          Size
+        </th>
+        <th id="dateColumnHeader" class="detailsColumn" tabindex="0" role="button">
+          Date Modified
+        </th>
+      </tr>
+    </thead>
+    <tbody id="tbody">
+    </tbody>
+  </table>
 
 
 
