--- a/educative/1. System Design Problems/index.html
+++ b/educative/1. System Design Problems/index.html
@@ -206,20 +206,13 @@
     }
   </style>
 
-  <title id="title">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/1. System Design
-    Problems/</title>
+  <title id="title">System Design Problems</title>
 
 </head>
 
 <body>
 
-  <div id="listingParsingErrorBox">Oh no! This server is sending data that Google Chrome can't understand. Please <a
-      href="http://code.google.com/p/chromium/issues/entry">report a bug</a> and include the <a
-      href="file:///Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/1.%20System%20Design%20Problems/LOCATION">raw
-      listing</a>.</div>
-
-  <h1 id="header">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/1. System Design
-    Problems/</h1>
+  <h1 id="header">System Design Problems</h1>
 
   <div id="parentDirLinkBox" style="display: block;">
     <a id="parentDirLink" class="icon up"
