--- a/educative/2. Glossary of System Design Basics/index.html
+++ b/educative/2. Glossary of System Design Basics/index.html
@@ -206,25 +206,19 @@
     }
   </style>
 
-  <title id="title">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/2. Glossary of
-    System Design Basics/</title>
+  <title id="title">Glossary of System Design Basics</title>
 
 </head>
 
 <body>
 
-  <div id="listingParsingErrorBox">Oh no! This server is sending data that Google Chrome can't understand. Please <a
-      href="http://code.google.com/p/chromium/issues/entry">report a bug</a> and include the <a
-      href="file:///Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/2.%20Glossary%20of%20System%20Design%20Basics/LOCATION">raw
-      listing</a>.</div>
 
-  <h1 id="header">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/2. Glossary of
-    System Design Basics/</h1>
+
+  <h1 id="header">Glossary of System Design Basics</h1>
 
   <div id="parentDirLinkBox" style="display: block;">
-    <a id="parentDirLink" class="icon up"
-      href="file:///Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/">
-      <span id="parentDirText">[parent directory]</span>
+    <a id="parentDirLink" class="icon up"></a>
+    <span id="parentDirText">[parent directory]</span>
     </a>
   </div>
 
