--- a/educative/index.html
+++ b/educative/index.html
@@ -211,18 +211,10 @@
 </head>
 
 <body>
-
-  <div id="listingParsingErrorBox">Oh no! This server is sending data that Google Chrome can't understand. Please <a
-      href="http://code.google.com/p/chromium/issues/entry">report a bug</a> and include the <a
-      href="file:///Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/LOCATION">raw listing</a>.
-  </div>
-
-  <h1 id="header">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/</h1>
+  <h1 id="header">educative.io</h1>
 
   <div id="parentDirLinkBox" style="display: block;">
-    <a id="parentDirLink" class="icon up"
-      href="file:///Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/">
-      <span id="parentDirText">[parent directory]</span>
+    <a id="parentDirLink" class="icon up"></a> <span id="parentDirText">[parent directory]</span>
     </a>
   </div>
 
