--- a/educative/index.html
+++ b/educative/index.html
@@ -206,7 +206,7 @@
     }
   </style>
 
-  <title id="title">Index of /Users/deepanshu.jain/Documents/GitHub/deepanshujain92.github.io/educative/</title>
+  <title id="title">educative.io - System Design</title>
 
 </head>
 
